@@ -74,6 +74,7 @@ gnulib_modules="
     alloca
     areadlinkat
     argmatch
+    argv-iter
     assert
     byteswap
     c-strcasestr
